--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,17 @@ cache:
     - '$HOME/.gradle'
 
 script: "./gradlew clean build"
+
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: godo-word
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: public_read
+    wait-until-deployed: true
+    on:
+      repo: teichae/cicd
+      branch: master
